Preparing to upload package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,22 @@
 
 export(cs.classDescrepancy)
 export(cs.doVarsExist)
+export(cs.doesDfExist)
 export(cs.findVarsIndex)
-export(cs.rmLots)
+export(cs.renameVars)
 export(cs.subjHasData)
+export(cs.tidyEnv)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
+importFrom(dsBaseClient,ds.dataFrame)
+importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
 importFrom(dsBaseClient,ds.rm)
 importFrom(purrr,map)
-importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
-importFrom(stringr,str_detect)
+importFrom(purrr,pmap)
