--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ include:
 - os: linux
   r: release
   script:
+    - R CMD -e 'install.packages("dsBaseClient", repo = "http://cran.datashield.org")'
     - R CMD build . --compact-vignettes=gs+qpdf
     - R CMD check *tar.gz --as-cran
