--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: r
 repos:
 CRAN: https://cloud.r-project.org
 molgenis: https://registry.molgenis.org/repository/R/
+datashield: http://cran.datashied.org/
 
 cache:
 packages: yes
@@ -12,6 +13,5 @@ include:
 - os: linux
   r: release
   script:
-    - R CMD -e 'install.packages("dsBaseClient", repo = "http://cran.datashield.org")'
     - R CMD build . --compact-vignettes=gs+qpdf
     - R CMD check *tar.gz --as-cran
