--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,20 +4,39 @@ export(cs.classDescrepancy)
 export(cs.doVarsExist)
 export(cs.doesDfExist)
 export(cs.findVarsIndex)
+export(cs.getStats)
 export(cs.renameVars)
 export(cs.subjHasData)
 export(cs.tidyEnv)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
+importFrom(dplyr,group_map)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
+importFrom(dsBaseClient,ds.length)
 importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
 importFrom(dsBaseClient,ds.rm)
+importFrom(dsBaseClient,ds.summary)
+importFrom(dsBaseClient,ds.var)
+importFrom(meta,metamean)
+importFrom(purrr,flatten_dbl)
+importFrom(purrr,imap)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(purrr,pmap)
+importFrom(stats,setNames)
+importFrom(stringr,str_detect)
+importFrom(tidyr,as_tibble)
+importFrom(tidyr,tibble)
