Corrected a few errors, added documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dh.doVarsExist)
 export(dh.doesDfExist)
 export(dh.findVarsIndex)
 export(dh.getStats)
+export(dh.makeOutcome)
 export(dh.regTab)
 export(dh.renameVars)
 export(dh.subjHasData)
