feat: added make outcome function and fixed lots of vars decl errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dh.doVarsExist)
 export(dh.doesDfExist)
 export(dh.findVarsIndex)
 export(dh.getStats)
+export(dh.makeOutcome)
 export(dh.regTab)
 export(dh.renameVars)
 export(dh.subjHasData)
@@ -25,9 +26,14 @@ importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
+importFrom(dsBaseClient,ds.dataFrameSort)
+importFrom(dsBaseClient,ds.dataFrameSubset)
 importFrom(dsBaseClient,ds.length)
 importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
+importFrom(dsBaseClient,ds.mean)
+importFrom(dsBaseClient,ds.merge)
+importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
@@ -36,8 +42,11 @@ importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
+importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(stats,filter)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
 importFrom(tidyr,as_tibble)
 importFrom(tidyr,tibble)
