--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dh.doVarsExist)
 export(dh.doesDfExist)
 export(dh.findVarsIndex)
 export(dh.getStats)
+export(dh.makeOutcome)
 export(dh.regTab)
 export(dh.renameVars)
 export(dh.subjHasData)
@@ -15,6 +16,7 @@ importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_map)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
@@ -25,19 +27,29 @@ importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
+importFrom(dsBaseClient,ds.dataFrameSort)
+importFrom(dsBaseClient,ds.dataFrameSubset)
 importFrom(dsBaseClient,ds.length)
+importFrom(dsBaseClient,ds.listDisclosureSettings)
 importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
+importFrom(dsBaseClient,ds.mean)
+importFrom(dsBaseClient,ds.merge)
+importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
+importFrom(magrittr,"%<>%")
 importFrom(meta,metamean)
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
+importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
-importFrom(tidyr,as_tibble)
-importFrom(tidyr,tibble)
+importFrom(stringr,str_extract)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
+importFrom(tidyr,pivot_longer)
