Updated documentation, fixed error in "makeoutcome" where it didn't import all the required packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,6 @@ importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
-importFrom(meta,metamean)
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
 importFrom(purrr,map)
@@ -54,3 +53,4 @@ importFrom(stringr,str_extract)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,tibble)
