--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dh.doesDfExist)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getStats)
+export(dh.glmTab)
 export(dh.makeOutcome)
 export(dh.regTab)
 export(dh.renameVars)
