fix: to not rely on the opals object all the time

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: dsHelper
 Title: Helper functions for use with DataSHIELD
-Version: 0.0.0.9002
+Version: 0.0.0.9004
 Authors@R: person("Tim", "Cadman", email = "t.cadman@bristol.ac.uk",
                   role = c("aut", "cre"))
-Description: Sometimes we need to automate things with DS. These functions help
-  to do that.
+Description: Sometimes we need to automate things with DS. These functions help to do that.
 Depends: 
   R (>= 3.5.0),
   dsBaseClient (>= 5.1.0)
@@ -17,9 +16,11 @@ Imports:
   tibble,
   tidyr
 Suggests: 
-    rmarkdown,
-    testthat,
-    mockery
+  knitr, 
+  rmarkdown,
+  testthat,
+  mockery
+VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
