chore: made the functions more Opal agnostic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,3 +58,4 @@ importFrom(stringr,str_extract)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,globalVariables)
