--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,16 @@ repos:
   molgenis: https://registry.molgenis.org/repository/R/
   datashield: http://cran.datashield.org/
 
-cache:
-  packages: yes
+cache: 
+  apt: true
+  packages: true
 
-matrix:
-  include:
-  - os: linux
-    r: release
-    script:
-      - R CMD build . --compact-vignettes=gs+qpdf
-      - R CMD check *tar.gz --as-cran
+before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
+
+deploy:
+  provider: script
+  script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY", ""))'
+  skip_cleanup: true
+  on:
+    branch: master
+
