--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,14 @@ cache:
 
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 
+matrix:
+  include:
+  - os: linux
+    r: release
+    script:
+      - R CMD build . --compact-vignettes=gs+qpdf
+      - R CMD check *tar.gz --as-cran
+
 deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY", ""))'
