--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,50 +8,67 @@ export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getStats)
 export(dh.glmTab)
+export(dh.lmeMultPoly)
 export(dh.makeOutcome)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,dense_rank)
 importFrom(dplyr,everything)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_map)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asCharacter)
 importFrom(dsBaseClient,ds.asFactor)
 importFrom(dsBaseClient,ds.asInteger)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
+importFrom(dsBaseClient,ds.cbind)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
 importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
+importFrom(dsBaseClient,ds.dim)
+importFrom(dsBaseClient,ds.isNA)
 importFrom(dsBaseClient,ds.length)
 importFrom(dsBaseClient,ds.listDisclosureSettings)
+importFrom(dsBaseClient,ds.lmerSLMA)
 importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
 importFrom(dsBaseClient,ds.mean)
 importFrom(dsBaseClient,ds.merge)
+importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.rep)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.table)
+importFrom(dsBaseClient,ds.tapply.assign)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
 importFrom(purrr,map)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(rlang,arg_match)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -59,3 +76,5 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,tibble)
+importFrom(utils,combn)
+importFrom(utils,globalVariables)
