--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(dh.getStats)
 export(dh.glmTab)
 export(dh.lmeMultPoly)
 export(dh.makeOutcome)
+export(dh.notCompletelyMissing)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
@@ -46,6 +47,7 @@ importFrom(dsBaseClient,ds.ls)
 importFrom(dsBaseClient,ds.make)
 importFrom(dsBaseClient,ds.mean)
 importFrom(dsBaseClient,ds.merge)
+importFrom(dsBaseClient,ds.numNA)
 importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.rm)
