added new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dh.findVarsIndex)
 export(dh.getStats)
 export(dh.glmTab)
 export(dh.lmeMultPoly)
+export(dh.localProxy)
 export(dh.makeOutcome)
 export(dh.renameVars)
 export(dh.subjHasData)
