--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,31 +7,41 @@ export(dh.findVarsIndex)
 export(dh.getStats)
 export(dh.glmTab)
 export(dh.lmeMultPoly)
+export(dh.lmerTab)
+export(dh.makeAgePolys)
+export(dh.makeLmerForm)
 export(dh.makeOutcome)
+export(dh.meanByOccasion)
+export(dh.metaManual)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_map)
+importFrom(dplyr,group_split)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asFactor)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
+importFrom(dsBaseClient,ds.cbind)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
@@ -39,6 +49,7 @@ importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
 importFrom(dsBaseClient,ds.isNA)
 importFrom(dsBaseClient,ds.length)
+importFrom(dsBaseClient,ds.levels)
 importFrom(dsBaseClient,ds.listDisclosureSettings)
 importFrom(dsBaseClient,ds.lmerSLMA)
 importFrom(dsBaseClient,ds.ls)
@@ -52,20 +63,29 @@ importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
+importFrom(purrr,compact)
+importFrom(purrr,cross2)
+importFrom(purrr,flatten)
+importFrom(purrr,flatten_chr)
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(purrr,set_names)
 importFrom(rlang,arg_match)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_remove)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(tidyr,separate)
 importFrom(tidyr,tibble)
 importFrom(utils,combn)
 importFrom(utils,globalVariables)
