Written new function dh.lmTab. This replaces the previous functions dh.glmTab and dh.lmerTab.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,12 @@ export(dh.classDiscrepancy)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getStats)
-export(dh.glmTab)
+export(dh.lmTab)
 export(dh.lmeMultPoly)
 export(dh.lmerTab)
 export(dh.makeAgePolys)
 export(dh.makeLmerForm)
 export(dh.makeOutcome)
-export(dh.meanByOccasion)
 export(dh.metaManual)
 export(dh.renameVars)
 export(dh.subjHasData)
@@ -38,7 +37,6 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
-importFrom(dsBaseClient,ds.asFactor)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.cbind)
@@ -49,7 +47,6 @@ importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
 importFrom(dsBaseClient,ds.isNA)
 importFrom(dsBaseClient,ds.length)
-importFrom(dsBaseClient,ds.levels)
 importFrom(dsBaseClient,ds.listDisclosureSettings)
 importFrom(dsBaseClient,ds.lmerSLMA)
 importFrom(dsBaseClient,ds.ls)
@@ -63,9 +60,7 @@ importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
-importFrom(purrr,compact)
 importFrom(purrr,cross2)
-importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,imap)
@@ -85,7 +80,6 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
-importFrom(tidyr,separate)
 importFrom(tidyr,tibble)
 importFrom(utils,combn)
 importFrom(utils,globalVariables)
