--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(dh.metaManual)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
+importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -60,6 +61,7 @@ importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
+importFrom(metafor,rma)
 importFrom(purrr,cross2)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,flatten_dbl)
