--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,19 @@ cache:
   apt: true
   packages: true
 
-before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
+before_cache: 
+  - Rscript -e 'remotes::install_cran("pkgdown")'
+  - Rscript -e 'remotes::install_cran("usethis")'
+  - Rscript -e 'remotes::install_cran("devtools")'
+
 deploy:
-  provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY", ""))'
-  skip_cleanup: true
-  on:
-    branch: master
+  - provider: script
+    script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY", ""))'
+    skip_cleanup: true
+    on:
+      branch: master
+  - provider: script
+    script: .ci/release.sh
+    on:
+      branch: master
 
