tests: fix test for doVarsExists

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
 importFrom(purrr,set_names)
+importFrom(rlang,":=")
 importFrom(rlang,arg_match)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
