--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,8 @@
 Package: dsHelper
-Title: Helper functions for use with DataSHIELD
+Title: Helper functions for use with 'DataSHIELD'
 Version: 0.0.0.9008
+Description: Often we need to automate things with 'DataSHIELD'. These functions help to do that.
+Maintainer: Tim Cadman <t.cadman@bristol.ac.uk>
 Authors@R: 
   c(person(given= "Tim", 
       family = "Cadman", 
@@ -12,7 +14,6 @@ Authors@R:
       role = "ctb",
       email = "s.haakma@rug.nl",
       comment = c(ORCID = "0000-0003-1278-9144")))
-Description: Often we need to automate things with DS. These functions help to do that.
 Depends: 
   R (>= 3.5.0)
 Imports:
@@ -32,6 +33,8 @@ Suggests:
   rmarkdown,
   testthat,
   mockery
+URL: https://lifecycle-project.github.io/ds-helper/
+BugReports: https://github.com/lifecycle-project/ds-helper/issues/
 VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
