--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,11 @@ Authors@R:
       family = "Haakma",
       role = "ctb",
       email = "s.haakma@rug.nl",
-      comment = c(ORCID = "0000-0003-1278-9144")))
+      comment = c(ORCID = "0000-0003-1278-9144")),
+    person(given = "Tom",
+      family = "Bishop",
+      role = "ctb",
+      email = "tom.bishop@mrc-epid.cam.ac.uk"))
 Depends: 
   R (>= 3.5.0)
 Imports:
@@ -28,7 +32,7 @@ Imports:
   rlang,
   DSI,
   metafor
-Suggests: 
+Suggests:
   knitr, 
   rmarkdown,
   testthat,
@@ -40,3 +44,4 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Additional_repositories: https://cran.obiba.org/
