new function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(dh.anyData)
 export(dh.classDiscrepancy)
 export(dh.dropCols)
 export(dh.findVarsIndex)
+export(dh.getAnonPlotData)
 export(dh.getStats)
 export(dh.lmTab)
 export(dh.lmeMultPoly)
@@ -58,6 +59,7 @@ importFrom(dsBaseClient,ds.numNA)
 importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.rm)
+importFrom(dsBaseClient,ds.scatterPlot)
 importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
