--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,13 @@ export(dh.subjHasData)
 export(dh.tidyEnv)
 importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,add_row)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -58,6 +61,7 @@ importFrom(dsBaseClient,ds.merge)
 importFrom(dsBaseClient,ds.numNA)
 importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
+importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
 importFrom(dsBaseClient,ds.summary)
@@ -75,6 +79,7 @@ importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
 importFrom(purrr,set_names)
+importFrom(rlang,":=")
 importFrom(rlang,arg_match)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
