Fixed binding errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(dh.subjHasData)
 export(dh.tidyEnv)
 importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,dense_rank)
