--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(dh.anyData)
 export(dh.classDiscrepancy)
+export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getAnonPlotData)
@@ -10,6 +11,7 @@ export(dh.lmTab)
 export(dh.lmeMultPoly)
 export(dh.localProxy)
 export(dh.makeAgePolys)
+export(dh.makeIQR)
 export(dh.makeLmerForm)
 export(dh.makeOutcome)
 export(dh.metaManual)
@@ -75,6 +77,7 @@ importFrom(purrr,imap)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
