Styled function, added digits option to documentation, updated namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(dh.metaManual)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
+importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
@@ -52,8 +53,10 @@ importFrom(dsBaseClient,ds.colnames)
 importFrom(dsBaseClient,ds.dataFrame)
 importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
+importFrom(dsBaseClient,ds.dim)
 importFrom(dsBaseClient,ds.isNA)
 importFrom(dsBaseClient,ds.length)
+importFrom(dsBaseClient,ds.levels)
 importFrom(dsBaseClient,ds.listDisclosureSettings)
 importFrom(dsBaseClient,ds.lmerSLMA)
 importFrom(dsBaseClient,ds.ls)
@@ -66,8 +69,6 @@ importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
-importFrom(dsBaseClient,ds.summary)
-importFrom(dsBaseClient,ds.var)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(purrr,cross2)
@@ -93,6 +94,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,tibble)
 importFrom(utils,combn)
 importFrom(utils,globalVariables)
