Added additional import, updated namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
@@ -82,6 +83,7 @@ importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(purrr,pmap_chr)
 importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
