chore: add lintr and codecov.yml to ignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,11 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-.github
-.azure
-.lintr
-codecov.yml
-azure-pipelines.yml
-ds-helper.sublime.*
+^\.github
+^\.azure
+^\.lintr
+^azure-pipelines\.yml
+^ds-helper\.sublime\.*
 ^README\.Rmd
 ^TROUBLESHOOTING\.Rmd$
-^TROUBLESHOOTING\.md$
 ^cran-comments\.md$
 ^codecov\.yml$
