--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ jobs:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
     - task: Bash@3
       displayName: 'Check R-package ${{ variables.job_name }}'
-      condition: eq(variables['Build.Reason'], 'PullRequest'))
+      condition: eq(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/pullrequest.bash
         failOnStderr: true
@@ -32,7 +32,7 @@ jobs:
         CODECOV_TOKEN: $(CODECOV_TOKEN)  
     - task: Bash@3
       displayName: 'Release R-package ${{ variables.job_name }}'
-      condition: ne(variables['Build.Reason'], 'PullRequest'))
+      condition: ne(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/release.bash
         failOnStderr: true
