chore: updated pipeline make sure git gets initielized early in the process

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pr:
 - master
 
 variables:
-  job_name: $(BUILD_REPOSITORY_NAME)
+  job_name: $(Build.RepositoryName)
 
 jobs:  
   - job: RPipeline
