Revert "fix: contributors block in DESCRIPTION file"
This reverts commit 220ec2a9fffc63f19767d7f7f0c7c33fdc9ce69c.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R:
     person(given = "Tom",
       family = "Bishop",
       role = "ctb",
-      email = "tom.bishop@mrc-epid.cam.ac.uk")))
+      email = "tom.bishop@mrc-epid.cam.ac.uk"))
 Depends: 
   R (>= 3.5.0)
 Imports:
