chore: fix styling and last notes in check build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,11 +33,12 @@ Imports:
   rlang,
   DSI,
   metafor
-Suggests: 
-  knitr,
-  rmarkdown,
-  testthat,
-  mockery
+Suggests:
+    knitr,
+    rmarkdown,
+    testthat,
+    mockery,
+    covr
 URL: https://github.com/lifecycle-project/ds-helper/,
   https://lifecycle-project.github.io/ds-helper/
 BugReports: https://github.com/lifecycle-project/ds-helper/issues/
@@ -45,4 +46,5 @@ VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
+Additional_repositories: https://cran.obiba.org/
