--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(dplyr,across)
 importFrom(dplyr,add_row)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
@@ -82,6 +83,7 @@ importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(purrr,pmap_chr)
 importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
