--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
       displayName: 'Prepare R-package ${{ variables.job_name }}'
       inputs:
         filePath: .azure/prepare.bash
-        failOnStderr: true
+        failOnStderr: false
       env:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
     - task: Bash@3
