--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,6 @@ trigger:
 pr:
 - master
 
-variables:
-  job_name: $(Build.RepositoryName)
-
 jobs:  
   - job: RPipeline
     pool:
@@ -15,23 +12,23 @@ jobs:
       image: 'rocker/tidyverse:latest'
     steps:
     - task: Bash@3
-      displayName: 'Prepare R-package ${{ variables.job_name }}'
+      displayName: Prepare R-package
       inputs:
         filePath: .azure/prepare.bash
         failOnStderr: false
       env:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
     - task: Bash@3
-      displayName: 'Check R-package ${{ variables.job_name }}'
+      displayName: Check R-package
       condition: eq(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/pullrequest.bash
-        failOnStderr: true
+        failOnStderr: false
       env:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
         CODECOV_TOKEN: $(CODECOV_TOKEN)  
     - task: Bash@3
-      displayName: 'Release R-package ${{ variables.job_name }}'
+      displayName: Release R-package
       condition: ne(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/release.bash
