--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
 importFrom(DSI,datashield.aggregate)
+importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
