--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,24 +14,32 @@ export(dh.makeAgePolys)
 export(dh.makeIQR)
 export(dh.makeLmerForm)
 export(dh.makeOutcome)
+export(dh.meanByAge)
 export(dh.metaManual)
+export(dh.predictLmer)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
+export(dh.trimPredData)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,between)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
 importFrom(dplyr,group_split)
 importFrom(dplyr,left_join)
@@ -83,9 +91,13 @@ importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
+importFrom(purrr,pmap_chr)
+importFrom(purrr,pmap_dbl)
+importFrom(purrr,pmap_df)
 importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
+importFrom(rlang,quo_name)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
