Updated version of roxygen in description, fixed some bits of code that were breaking it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getAnonPlotData)
+export(dh.getRmStats)
 export(dh.getStats)
 export(dh.lmTab)
 export(dh.lmeMultPoly)
