--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ jobs:
       condition: eq(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/pullrequest.bash
+        failOnStderr: true
       env:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
         CODECOV_TOKEN: $(CODECOV_TOKEN)  
@@ -30,8 +31,11 @@ jobs:
       condition: ne(variables['Build.Reason'], 'PullRequest')
       inputs:
         filePath: .azure/release.bash
+        failOnStderr: true
       env:
         R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
-        CODECOV_TOKEN: $(CODECOV_TOKEN)  
         GITHUB_TOKEN: $(GITHUB_TOKEN)
+        NEXUS_PASS: $(NEXUS_PASS)
+        NEXUS_USER: $(NEXUS_USER)
+        REGISTRY: ${REGISTRY}
         
