--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dsHelper
 Type: Package
 Title: Helper Functions for Use with 'DataSHIELD'
-Version: 0.0.1.9000
+Version: 1.0.0.9000
 Description: Often we need to automate things with 'DataSHIELD'. These functions help to do that.
 Authors@R: 
   c(person(given= "Tim", 
@@ -22,11 +22,12 @@ Maintainer: Tim Cadman <t.cadman@bristol.ac.uk>
 Depends: 
   R (>= 3.5.0)
 Imports:
-  dsBaseClient (>= 6.0.1),
+  dsBaseClient (>= 6.2.0),
   dplyr (>= 1.0.2),
   tibble,
   purrr,
   tidyr,
+  tidyselect,
   stringr,
   meta,
   magrittr,
