--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,12 +49,14 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asFactorSimple)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.cbind)
@@ -79,6 +81,9 @@ importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
+importFrom(dsBaseClient,ds.summary)
+importFrom(dsBaseClient,ds.tapply)
+importFrom(dsBaseClient,ds.tapply.assign)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(purrr,cross2)
@@ -91,6 +96,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_lgl)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,pmap_dbl)
@@ -99,6 +105,7 @@ importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
 importFrom(rlang,quo_name)
+importFrom(rlang,sym)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -110,5 +117,6 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,tibble)
+importFrom(tidyselect,vars_select_helpers)
 importFrom(utils,combn)
 importFrom(utils,globalVariables)
