chore: upgrade to dsBaseClient 6.2.0
BREAKING: you will need to have dsBaseClient 6.2.0 available on your system and on the cohorts system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getAnonPlotData)
+export(dh.getRmStats)
 export(dh.getStats)
 export(dh.lmTab)
 export(dh.lmeMultPoly)
@@ -55,6 +56,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asFactorSimple)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.cbind)
@@ -79,6 +81,9 @@ importFrom(dsBaseClient,ds.reShape)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
+importFrom(dsBaseClient,ds.summary)
+importFrom(dsBaseClient,ds.tapply)
+importFrom(dsBaseClient,ds.tapply.assign)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(purrr,cross2)
