refactored make outcome as new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dh.metaManual)
 export(dh.predictLmer)
 export(dh.renameVars)
 export(dh.subjHasData)
+export(dh.subsetRM)
 export(dh.tidyEnv)
 export(dh.trimPredData)
 importFrom(DSI,datashield.aggregate)
@@ -42,6 +43,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
 importFrom(dplyr,group_split)
+importFrom(dplyr,if_all)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
@@ -76,9 +78,11 @@ importFrom(dsBaseClient,ds.merge)
 importFrom(dsBaseClient,ds.numNA)
 importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
+importFrom(dsBaseClient,ds.rep)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
+importFrom(dsBaseClient,ds.table)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(purrr,cross2)
@@ -91,6 +95,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_depth)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_chr)
