--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,13 +13,12 @@ export(dh.localProxy)
 export(dh.makeAgePolys)
 export(dh.makeIQR)
 export(dh.makeLmerForm)
-export(dh.makeOutcome)
+export(dh.makeStrata)
 export(dh.meanByAge)
 export(dh.metaManual)
 export(dh.predictLmer)
 export(dh.renameVars)
 export(dh.subjHasData)
-export(dh.subsetRM)
 export(dh.tidyEnv)
 export(dh.trimPredData)
 importFrom(DSI,datashield.aggregate)
@@ -62,6 +61,7 @@ importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.cbind)
 importFrom(dsBaseClient,ds.class)
 importFrom(dsBaseClient,ds.colnames)
+importFrom(dsBaseClient,ds.completeCases)
 importFrom(dsBaseClient,ds.dataFrame)
 importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
