--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dh.localProxy)
 export(dh.makeAgePolys)
 export(dh.makeIQR)
 export(dh.makeLmerForm)
+export(dh.makeOutcome)
 export(dh.makeStrata)
 export(dh.meanByAge)
 export(dh.metaManual)
