--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,4 +119,5 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,tibble)
 importFrom(utils,combn)
+importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
