--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(dh.makeLmerForm)
 export(dh.makeOutcome)
 export(dh.makeStrata)
 export(dh.meanByAge)
+export(dh.meanByGroup)
 export(dh.metaManual)
 export(dh.predictLmer)
 export(dh.renameVars)
