--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
 importFrom(dplyr,all_of)
+importFrom(dplyr,all_vars)
 importFrom(dplyr,arrange)
 importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
@@ -44,7 +45,6 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
 importFrom(dplyr,group_split)
-importFrom(dplyr,if_all)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
