--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dh.meanByAge)
 export(dh.meanByGroup)
 export(dh.metaManual)
 export(dh.predictLmer)
+export(dh.quantileSplit)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
