--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(dh.meanByAge)
 export(dh.meanByGroup)
 export(dh.metaManual)
 export(dh.predictLmer)
-export(dh.quantileSplit)
+export(dh.quartileSplit)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
@@ -42,6 +42,7 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,filter_at)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
@@ -82,6 +83,7 @@ importFrom(dsBaseClient,ds.merge)
 importFrom(dsBaseClient,ds.numNA)
 importFrom(dsBaseClient,ds.quantileMean)
 importFrom(dsBaseClient,ds.reShape)
+importFrom(dsBaseClient,ds.recodeValues)
 importFrom(dsBaseClient,ds.rep)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
@@ -109,11 +111,13 @@ importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
 importFrom(rlang,quo_name)
+importFrom(rlang,set_names)
 importFrom(rlang,sym)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_subset)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
