--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_subset)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
