--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,tibble)
+importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
