--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,7 @@ pkgdown: 2.0.3
 pkgdown_sha: ~
 articles:
   TROUBLESHOOTING: TROUBLESHOOTING.html
-last_built: 2022-05-02T13:03Z
+  ds-helper-main-vignette: ds-helper-main-vignette.html
+  ds-helper-trajectories-vignette: ds-helper-trajectories-vignette.html
+last_built: 2022-05-03T20:03Z
 
