added function to cast columns of dataframe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(dh.anyData)
 export(dh.classDiscrepancy)
+export(dh.columnCast)
 export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
@@ -61,6 +62,9 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
+importFrom(dsBaseClient,ds.asCharacter)
+importFrom(dsBaseClient,ds.asFactor)
+importFrom(dsBaseClient,ds.asInteger)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
 importFrom(dsBaseClient,ds.cbind)
