tidied everything up following checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(dh.anyData)
 export(dh.classDiscrepancy)
 export(dh.columnCast)
+export(dh.createTableOne)
 export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
@@ -19,12 +20,16 @@ export(dh.makeStrata)
 export(dh.meanByAge)
 export(dh.meanByGroup)
 export(dh.metaManual)
+export(dh.metaSepModels)
+export(dh.multGLM)
 export(dh.predictLmer)
 export(dh.quartileSplit)
 export(dh.renameVars)
 export(dh.subjHasData)
 export(dh.tidyEnv)
 export(dh.trimPredData)
+export(dh.zByGroup)
+export(dt.makeExcludedDf)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
@@ -75,6 +80,7 @@ importFrom(dsBaseClient,ds.dataFrame)
 importFrom(dsBaseClient,ds.dataFrameSort)
 importFrom(dsBaseClient,ds.dataFrameSubset)
 importFrom(dsBaseClient,ds.dim)
+importFrom(dsBaseClient,ds.glmSLMA)
 importFrom(dsBaseClient,ds.isNA)
 importFrom(dsBaseClient,ds.length)
 importFrom(dsBaseClient,ds.levels)
@@ -96,6 +102,7 @@ importFrom(dsBaseClient,ds.scatterPlot)
 importFrom(dsBaseClient,ds.table)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
+importFrom(metafor,rma.uni)
 importFrom(purrr,cross2)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,flatten_dbl)
@@ -115,6 +122,7 @@ importFrom(purrr,pmap_df)
 importFrom(purrr,set_names)
 importFrom(rlang,":=")
 importFrom(rlang,arg_match)
+importFrom(rlang,is_bool)
 importFrom(rlang,quo_name)
 importFrom(rlang,set_names)
 importFrom(rlang,sym)
@@ -129,8 +137,11 @@ importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,separate)
 importFrom(tidyr,tibble)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
+importFrom(utils,head)
+importFrom(utils,tail)
