--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,12 @@ export(dt.makeExcludedDf)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_choice)
+importFrom(checkmate,assert_data_frame)
+importFrom(checkmate,assert_list)
+importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_subset)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
