Tidied up deprication

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,12 +33,17 @@ export(dt.makeExcludedDf)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
+importFrom(checkmate,assert)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_choice)
 importFrom(checkmate,assert_data_frame)
 importFrom(checkmate,assert_list)
 importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_subset)
+importFrom(checkmate,check_choice)
+importFrom(checkmate,check_string)
+importFrom(checkmate,makeAssertCollection)
+importFrom(checkmate,reportAssertions)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
