--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,15 +33,18 @@ Imports:
   DSI,
   metafor,
   checkmate,
+  withr,
+  lme4, 
+  webmockr
 Suggests:
   knitr,
   rmarkdown,
   testthat,
   mockery
-URL: https://github.com/lifecycle-project/ds-helper/
-https: //lifecycle-project.github.io/ds-helper/
-  BugReports: https://github.com/lifecycle-project/ds-helper/issues/
-  VignetteBuilder: knitr
+URL: https://github.com/lifecycle-project/ds-helper/, 
+  https: //lifecycle-project.github.io/ds-helper/
+BugReports: https://github.com/lifecycle-project/ds-helper/issues/
+VignetteBuilder: knitr
 License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.2.3
