chore: automatic update to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(dh.tidyEnv)
 export(dh.trimPredData)
 export(dh.zByGroup)
 export(dt.makeExcludedDf)
+import(lme4)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
@@ -41,6 +42,8 @@ importFrom(checkmate,assert_list)
 importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_subset)
 importFrom(checkmate,check_choice)
+importFrom(checkmate,check_list)
+importFrom(checkmate,check_set_equal)
 importFrom(checkmate,check_string)
 importFrom(checkmate,makeAssertCollection)
 importFrom(checkmate,reportAssertions)
@@ -132,6 +135,7 @@ importFrom(purrr,pmap_dbl)
 importFrom(purrr,pmap_df)
 importFrom(purrr,set_names)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,arg_match)
 importFrom(rlang,is_bool)
 importFrom(rlang,quo_name)
