--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(checkmate,assert_data_frame)
 importFrom(checkmate,assert_list)
 importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_subset)
+importFrom(checkmate,checkCharacter)
 importFrom(checkmate,check_choice)
 importFrom(checkmate,check_list)
 importFrom(checkmate,check_set_equal)
