--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,9 +45,11 @@ importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_subset)
 importFrom(checkmate,check_character)
 importFrom(checkmate,check_choice)
+importFrom(checkmate,check_data_frame)
 importFrom(checkmate,check_list)
 importFrom(checkmate,check_set_equal)
 importFrom(checkmate,check_string)
+importFrom(checkmate,check_subset)
 importFrom(checkmate,check_true)
 importFrom(checkmate,makeAssertCollection)
 importFrom(checkmate,reportAssertions)
