chore: dependency management

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(dh.defineCases)
 export(dh.dropCols)
 export(dh.findVarsIndex)
 export(dh.getAnonPlotData)
+export(dh.getRmStats)
 export(dh.getStats)
 export(dh.lmTab)
 export(dh.lmeMultPoly)
@@ -89,6 +90,7 @@ importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
 importFrom(dsBaseClient,ds.asCharacter)
 importFrom(dsBaseClient,ds.asFactor)
+importFrom(dsBaseClient,ds.asFactorSimple)
 importFrom(dsBaseClient,ds.asInteger)
 importFrom(dsBaseClient,ds.asNumeric)
 importFrom(dsBaseClient,ds.assign)
@@ -121,7 +123,10 @@ importFrom(dsBaseClient,ds.rep)
 importFrom(dsBaseClient,ds.replaceNA)
 importFrom(dsBaseClient,ds.rm)
 importFrom(dsBaseClient,ds.scatterPlot)
+importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.table)
+importFrom(dsBaseClient,ds.tapply)
+importFrom(dsBaseClient,ds.tapply.assign)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(metafor,rma.uni)
