--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,19 +37,17 @@ import(lme4)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
 importFrom(DSI,datashield.connections_find)
-importFrom(checkmate,assert)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_choice)
 importFrom(checkmate,assert_data_frame)
 importFrom(checkmate,assert_list)
 importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_set_equal)
+importFrom(checkmate,assert_string)
 importFrom(checkmate,assert_subset)
 importFrom(checkmate,check_character)
-importFrom(checkmate,check_choice)
 importFrom(checkmate,check_data_frame)
 importFrom(checkmate,check_list)
-importFrom(checkmate,check_set_equal)
-importFrom(checkmate,check_string)
 importFrom(checkmate,check_subset)
 importFrom(checkmate,check_true)
 importFrom(checkmate,makeAssertCollection)
