chore: updated dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,7 @@ importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_set_equal)
 importFrom(checkmate,assert_string)
 importFrom(checkmate,assert_subset)
-importFrom(checkmate,check_character)
-importFrom(checkmate,check_data_frame)
-importFrom(checkmate,check_list)
-importFrom(checkmate,check_subset)
-importFrom(checkmate,check_true)
+importFrom(checkmate,assert_true)
 importFrom(checkmate,makeAssertCollection)
 importFrom(checkmate,reportAssertions)
 importFrom(dplyr,"%>%")
