--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,5 +5,6 @@ articles:
   TROUBLESHOOTING: TROUBLESHOOTING.html
   ds-helper-main-vignette: ds-helper-main-vignette.html
   ds-helper-trajectories-vignette: ds-helper-trajectories-vignette.html
-last_built: 2023-10-31T16:45Z
+  test: test.html
+last_built: 2023-11-01T08:02Z
 
