--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
+importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(dsBaseClient,ds.Boole)
@@ -148,6 +149,8 @@ importFrom(rlang,is_bool)
 importFrom(rlang,quo_name)
 importFrom(rlang,set_names)
 importFrom(rlang,sym)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
