chore: passing checks and build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
