now export pool function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(dh.meanByGroup)
 export(dh.metaManual)
 export(dh.metaSepModels)
 export(dh.multGLM)
+export(dh.pool)
 export(dh.predictLmer)
 export(dh.quartileSplit)
 export(dh.renameVars)
