--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,15 +33,16 @@ Imports:
   DSI,
   metafor,
   checkmate,
-  withr,
   lme4, 
-  webmockr,
   tidyselect
 Suggests:
   knitr,
   rmarkdown,
   testthat,
-  mockery
+  mockery,
+  httr,
+  webmockr,
+  withr
 URL: https://github.com/lifecycle-project/ds-helper/, 
   https: //lifecycle-project.github.io/ds-helper/
 BugReports: https://github.com/lifecycle-project/ds-helper/issues/
