chore: added arrow to dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(dh.subjHasData)
 export(dh.tidyEnv)
 export(dh.trimPredData)
 export(dh.zByGroup)
+import(arrow)
 import(lme4)
 importFrom(DSI,datashield.aggregate)
 importFrom(DSI,datashield.assign)
