--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.table)
 importFrom(dsBaseClient,ds.tapply)
 importFrom(dsBaseClient,ds.tapply.assign)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
 importFrom(metafor,rma.uni)
