--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(checkmate,assert_subset)
 importFrom(checkmate,assert_true)
 importFrom(checkmate,makeAssertCollection)
 importFrom(checkmate,reportAssertions)
+importFrom(cli,cli_alert_warning)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,add_row)
@@ -70,6 +71,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
 importFrom(dplyr,group_split)
+importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
@@ -125,6 +127,7 @@ importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.table)
 importFrom(dsBaseClient,ds.tapply)
 importFrom(dsBaseClient,ds.tapply.assign)
+importFrom(dsBaseClient,ds.unique)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
