chore: add dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_keys)
 importFrom(dplyr,group_map)
 importFrom(dplyr,group_split)
+importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
@@ -125,6 +126,7 @@ importFrom(dsBaseClient,ds.summary)
 importFrom(dsBaseClient,ds.table)
 importFrom(dsBaseClient,ds.tapply)
 importFrom(dsBaseClient,ds.tapply.assign)
+importFrom(dsBaseClient,ds.unique)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%<>%")
 importFrom(metafor,rma)
